samples/_failures_safe/1761190591_dd7704_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f77902a1.c: In function ‘hex_to_bytes’:
./samples/SAFE/__tmp_f77902a1.c:117:9: error: expected identifier or ‘(’ at end of input
  117 |         uint8_t
      |         ^~~~~~~
./samples/SAFE/__tmp_f77902a1.c:117:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f77902a1.c:117:9: error: expected declaration or statement at end of input
